<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_agregar_comida">AgregarComida</string>
    <string name="agNuevProd">Agregar nuevo producto</string>
    <string name="nombre">Nombre</string>
    <string name="descripcion">Descripción</string>
    <string name="pais">País</string>
    <string name="cargarImagen">Cargar Imagen</string>
    <string name="agregar">Agregar</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_ver_productos">VerProductos</string>
    <string name="ingresar">Ingresar</string>
    <string name="app_id">287643098113118</string>
    <string name="title_activity_ver_busqueda">verBusqueda</string>

</resources>
