<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gustavovargas.lab2.AgregarComida"
    android:background="#5702f8ff">

    <TextView
        android:text="@string/agNuevProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/inpNombre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autoText="true"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:text="@string/nombre" />

    <EditText
        android:id="@+id/inpDescripcion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp"
        android:text="@string/descripcion" />

    <EditText
        android:id="@+id/inpPais"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="160dp"
        android:text="@string/pais" />

    <Button
        android:id="@+id/buttonLoadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/cargarImagen"
        android:layout_gravity="center"
        android:layout_below="@+id/inpPais"
        android:layout_toRightOf="@+id/agregar"
        android:layout_toEndOf="@+id/agregar"
        android:onClick="onClick"></Button>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:id="@+id/agregar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="agregarComidaParse" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:id="@+id/cancelar"
        android:layout_alignTop="@+id/agregar"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:onClick="cancelarComida" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgProducto"
        android:src="@drawable/ic_launcher"
        android:layout_above="@+id/agregar"
        android:layout_alignLeft="@+id/buttonLoadPicture"
        android:layout_alignStart="@+id/buttonLoadPicture"
        android:layout_below="@+id/buttonLoadPicture"
        android:layout_toLeftOf="@+id/cancelar"
        android:layout_toStartOf="@+id/cancelar" />

</RelativeLayout>
